disabled google calendar integration & fixed height so extension doesn't jump around on load

--- a/css/main.css
+++ b/css/main.css
@@ -10,8 +10,9 @@ a {
 #main {
   min-width: 556px;
   width: 556px;
-  min-height: 380px;
-  height: 380px;
+  min-height: 450px;
+  max-height: 450px;
+  height: 450px;
 
   -webkit-user-select: none;
   -moz-user-select: none;
